2009-04-21  Alex Murray  <murray.alex@gmail.com>

	* Fix bug where changing temperature scale would convert limits of
	non-temperature sensors (Fixes Ubuntu bug #249955)

2009-03-15  Alex Murray  <murray.alex@gmail.com>

	* GNOME Sensors Applet Version 2.2.3 Released

	* Fix error retrieving sensor value if compiled against old libsensors
	library version (libsensors API version < 4) (Fixes bug #2687451).

2009-03-08  Alex Murray  <murray.alex@gmail.com>

	* GNOME Sensors Applet Version 2.2.2 Released

	* Avoid using sensors_parse_chip_name in libsensors plugin each time we
	need to get a sensor's value since it leaks memory. (Fixes bug
	#2555807)

2009-03-05  Alex Murray  <murray.alex@gmail.com>

	* Add plugin for fan sensor on eeepc

	* Fix bug where choosing to display icons would fail if we start with a
	different display mode

	* Add support to nvidia plugin for multiple GPUs (Fixes bug #2659148)

2008-03-16  Alex Murray  <murray.alex@gmail.com>

	* Fixed bugs in libsensors and nvidia plugins, where we would
	return with no value on some error conditions at start-up, which
	could cause a segmentation violation.

2008-03-09  Alex Murray  <murray.alex@gmail.com>

	* Added Brazilian Portuguese translation (thanks to Amadeu
	A. Barbosa Júnior)

2008-02-10  Alex Murray  <murray.alex@gmail.com>

	* Use "program-name" instead of "name" in about dialog as per GTK
	API

	* Updated Copyright of files to 2008

2007-12-26  Alex Murray  <murray.alex@gmail.com>

	* GNOME Sensors Applet Version 2.2.1 Released

	* Fixed bug in libsensors4 plugin [ 1858005 ] segfault on startup
	
2007-12-24  Alex Murray  <murray.alex@gmail.com>

	* GNOME Sensors Applet Version 2.2.0 Released

2007-12-23  Alex Murray  <murray.alex@gmail.com>

	* Fixed crash when removing applet from panel, whilst the
	preferences window is open - fixes Ubuntu bug #172991
	
2007-12-20  Alex Murray  <murray.alex@gmail.com>

	* Work around memory leak in libsensors3 code by manually freeing